--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socket-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Reconstruir módulos de Node\r ```\r npm install\r ```",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +11,20 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0"
-  }
+    "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JoanGarciaCedano/SOCKETS-Servidor-base.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JoanGarciaCedano/SOCKETS-Servidor-base/issues"
+  },
+  "homepage": "https://github.com/JoanGarciaCedano/SOCKETS-Servidor-base#readme"
 }
